Fix <main> not displaying as block in IE 11
I believe that IE 11 doesn't render some of the HTML5 elements correctly. In particular, it was displaying <main> as inline not block so it just stretched to the whole width of the page. Adding display: block; fixed that.

--- a/stylesheets/theme.scss
+++ b/stylesheets/theme.scss
@@ -21,6 +21,7 @@ body {
 }
 
 main {
+  display: block;
   margin: 0 auto;
   max-width: $max-width;
 }
